# vasco_npm

./: CMakeLists.txt  README.md  package.xml
config/: regular-grid-3x3-noisy.yaml  vasco-noisy.yaml
src/: vasco-plugin.cpp
