<?xml version="1.0"?>
<package>
  <name>vasco_npm</name>
  <version>0.0.0</version>
  <description>
    Nepumuk simulator plugin and configuration for the Vaco project.
  </description>
  <url type="website">https://github.com/poftwaresatent/vasco_npm</url>
  <author email="poftwaresatent@gmail.com">Roland Philippsen</author>
  <maintainer email="poftwaresatent@gmail.com">Roland Philippsen</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sfl2</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sfl2</run_depend>
  
</package>
